{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 90,
  "lineage": "e847e254-81fc-d620-e10e-59a9b9f689f5",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bastion_nic",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth30-bstn-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth30-bstn-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/publicIPAddresses/geth30-ip",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-pblc-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth30-bstn-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.public_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "worker_nic",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth30-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth30-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.20",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth30-wrkr-nic",
            "private_ip_address": "10.0.2.20",
            "private_ip_addresses": [
              "10.0.2.20"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth31-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth31-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.24",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth31-wrkr-nic",
            "private_ip_address": "10.0.2.24",
            "private_ip_addresses": [
              "10.0.2.24"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth32-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth32-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.21",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth32-wrkr-nic",
            "private_ip_address": "10.0.2.21",
            "private_ip_addresses": [
              "10.0.2.21"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth33-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth33-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.22",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth33-wrkr-nic",
            "private_ip_address": "10.0.2.22",
            "private_ip_addresses": [
              "10.0.2.22"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth34-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth34-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.27",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth34-wrkr-nic",
            "private_ip_address": "10.0.2.27",
            "private_ip_addresses": [
              "10.0.2.27"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth35-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth35-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.18",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth35-wrkr-nic",
            "private_ip_address": "10.0.2.18",
            "private_ip_addresses": [
              "10.0.2.18"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth36-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth36-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.7",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth36-wrkr-nic",
            "private_ip_address": "10.0.2.7",
            "private_ip_addresses": [
              "10.0.2.7"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth37-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth37-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.9",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth37-wrkr-nic",
            "private_ip_address": "10.0.2.9",
            "private_ip_addresses": [
              "10.0.2.9"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth38-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth38-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.13",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth38-wrkr-nic",
            "private_ip_address": "10.0.2.13",
            "private_ip_addresses": [
              "10.0.2.13"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth39-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth39-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.25",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth39-wrkr-nic",
            "private_ip_address": "10.0.2.25",
            "private_ip_addresses": [
              "10.0.2.25"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth310-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth310-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.26",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth310-wrkr-nic",
            "private_ip_address": "10.0.2.26",
            "private_ip_addresses": [
              "10.0.2.26"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth311-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth311-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.19",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth311-wrkr-nic",
            "private_ip_address": "10.0.2.19",
            "private_ip_addresses": [
              "10.0.2.19"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth312-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth312-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.11",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth312-wrkr-nic",
            "private_ip_address": "10.0.2.11",
            "private_ip_addresses": [
              "10.0.2.11"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth313-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth313-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.28",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth313-wrkr-nic",
            "private_ip_address": "10.0.2.28",
            "private_ip_addresses": [
              "10.0.2.28"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth314-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth314-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth314-wrkr-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth315-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth315-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.16",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth315-wrkr-nic",
            "private_ip_address": "10.0.2.16",
            "private_ip_addresses": [
              "10.0.2.16"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth316-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth316-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.8",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth316-wrkr-nic",
            "private_ip_address": "10.0.2.8",
            "private_ip_addresses": [
              "10.0.2.8"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth317-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth317-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.10",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth317-wrkr-nic",
            "private_ip_address": "10.0.2.10",
            "private_ip_addresses": [
              "10.0.2.10"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth318-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth318-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.23",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth318-wrkr-nic",
            "private_ip_address": "10.0.2.23",
            "private_ip_addresses": [
              "10.0.2.23"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth319-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth319-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.17",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth319-wrkr-nic",
            "private_ip_address": "10.0.2.17",
            "private_ip_addresses": [
              "10.0.2.17"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth320-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth320-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth320-wrkr-nic",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth321-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth321-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.14",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth321-wrkr-nic",
            "private_ip_address": "10.0.2.14",
            "private_ip_addresses": [
              "10.0.2.14"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 22,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth322-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth322-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.12",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth322-wrkr-nic",
            "private_ip_address": "10.0.2.12",
            "private_ip_addresses": [
              "10.0.2.12"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 23,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth323-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth323-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth323-wrkr-nic",
            "private_ip_address": "10.0.2.6",
            "private_ip_addresses": [
              "10.0.2.6"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 24,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth324-wrkr-nic",
            "internal_domain_name_suffix": "2kmdwtmrh2auddsjd22nogkqxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth324-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.15",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth324-wrkr-nic",
            "private_ip_address": "10.0.2.15",
            "private_ip_addresses": [
              "10.0.2.15"
            ],
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "bastion_nic_assoc",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth30-bstn-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-pblc-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth30-bstn-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-pblc-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.bastion_nic",
            "azurerm_network_security_group.public_nsg",
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.public_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "worker_nic_assoc",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth30-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth30-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth31-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth31-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth32-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth32-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth33-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth33-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth34-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth34-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth35-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth35-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth36-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth36-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth37-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth37-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth38-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth38-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth39-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth39-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth310-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth310-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth311-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth311-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth312-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth312-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth313-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth313-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth314-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth314-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth315-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth315-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth316-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth316-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth317-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth317-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth318-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth318-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth319-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth319-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth320-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth320-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth321-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth321-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 22,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth322-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth322-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 23,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth323-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth323-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 24,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth324-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkInterfaces/geth324-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private_nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "location": "westeurope",
            "name": "geth3-prvt-nsg",
            "resource_group_name": "geth3-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-public-subnet",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "public_nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-pblc-nsg",
            "location": "westeurope",
            "name": "geth3-pblc-nsg",
            "resource_group_name": "geth3-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-all",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/publicIPAddresses/geth30-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "geth30-ip",
            "resource_group_name": "geth3-rg",
            "sku": "Basic",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001",
            "name": "geth3-prvt-sn001",
            "resource_group_name": "geth3-rg",
            "service_endpoints": [
              "Microsoft.Sql",
              "Microsoft.ServiceBus"
            ],
            "virtual_network_name": "geth3-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public_subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-pblc-sn001",
            "name": "geth3-pblc-sn001",
            "resource_group_name": "geth3-rg",
            "service_endpoints": [
              "Microsoft.ServiceBus",
              "Microsoft.ContainerRegistry"
            ],
            "virtual_network_name": "geth3-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private_subnet_assoc",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-prvt-nsg",
            "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-prvt-sn001"
          },
          "dependencies": [
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public_subnet_assoc",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-pblc-sn001",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/networkSecurityGroups/geth3-pblc-nsg",
            "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet/subnets/geth3-pblc-sn001"
          },
          "dependencies": [
            "azurerm_network_security_group.public_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.public_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "4d3b98e2-3f91-4101-8e49-1f38d71950b9",
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth3-rg/providers/Microsoft.Network/virtualNetworks/geth3-vnet",
            "location": "westeurope",
            "name": "geth3-vnet",
            "resource_group_name": "geth3-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth3",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    }
  ]
}